# DllInjectionSkeleton

./: .gitignore  CMakeLists.txt  README.md
cmake/: GurkaInjectorConfig.cmake
include/: dll_injector.h  dll_injector_cli.h
include/gurka/: dll_injector.h  dll_injector_cli.h
samples/: CMakeLists.txt
samples/injected/: CMakeLists.txt  console.cc  injected.cc
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  cli.cpp  dll_injector_cli.cpp
src/dll-injector/: CMakeLists.txt  dll_injector.cc
tests/: CMakeLists.txt  cli_test.cpp
